# plexLike

./: .gitignore  .gitmodules  CMakeLists.txt  FilesServices.cpp  FilesServices.h  Server.cpp  Server.h  clear.sh  main.cpp
Entities/: User.cpp  User.h
Media/: Media.cpp  Media.h  Movie.cpp  Movie.h
Media/MediaManager/: MediaManager.cpp  MediaManager.h
bdd/: Database.cpp  Database.h  DatabaseService.cpp  DatabaseService.h
scripts/: bdd.sql  credentials.sql
